Window functions spilling to disk can fail across getMore's

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.0.0-rc0, 5.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v5.0
    • Query Optimization 2021-05-31
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This was found locally by adding a small batch size to the WF helper code, which passed for most tests except for spill_to_disk.js which failed for the following reason:

      [js_test:spill_to_disk] assert: command failed: {
      [js_test:spill_to_disk]         "ok" : 0,
      [js_test:spill_to_disk]         "errmsg" : "Executor error during getMore :: caused by :: Failed to write to disk because WiredTigerRecordStore::insertRecord 95: Operation not supported",
      [js_test:spill_to_disk]         "code" : 5643002,
      [js_test:spill_to_disk]         "codeName" : "Location5643002"
      [js_test:spill_to_disk] }
      

            Assignee:
            Ted Tuckman (Inactive)
            Reporter:
            Nicholas Zolnierz
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: