SERVER-57024 Fix SpillableCache writes to disk across getMore requests