src/mongo/db/pipeline/process_interface/common_mongod_process_interface.cpp
@@ -143,6 +143,17 @@ bool supportsUniqueKey(const boost::intrusive_ptr<ExpressionContext>& expCtx,
             CollatorInterface::collatorsMatch(index->getCollator(), expCtx->getCollator()));
 }
 
+// In an operation across GetMore requests we need to check that ignore conflicts is set for each
+// write to the RecordStore.
+void setIgnoreConflictsWriteBehavior(const boost::intrusive_ptr<ExpressionContext>& expCtx) {
+    if (expCtx->opCtx->recoveryUnit()->getPrepareConflictBehavior() !=
+        PrepareConflictBehavior::kIgnoreConflictsAllowWrites) {
+        expCtx->opCtx->recoveryUnit()->abandonSnapshot();
+        expCtx->opCtx->recoveryUnit()->setPrepareConflictBehavior(
+            PrepareConflictBehavior::kIgnoreConflictsAllowWrites);
+    }
+}
+
 }  // namespace
 
 std::unique_ptr<TransactionHistoryIteratorBase>
@@ -666,6 +677,7 @@ void CommonMongodProcessInterface::writeRecordsToRecordStore(
     std::vector<Record>* records,
     const std::vector<Timestamp>& ts) const {
     tassert(5643012, "Attempted to write to record store with nullptr", records);
+    setIgnoreConflictsWriteBehavior(expCtx);
     writeConflictRetry(expCtx->opCtx, "MPI::writeRecordsToRecordStore", expCtx->ns.ns(), [&] {
         AutoGetCollection autoColl(expCtx->opCtx, expCtx->ns, MODE_IX);
         WriteUnitOfWork wuow(expCtx->opCtx);
@@ -696,6 +708,7 @@ Document CommonMongodProcessInterface::readRecordFromRecordStore(
 
 void CommonMongodProcessInterface::deleteRecordFromRecordStore(
     const boost::intrusive_ptr<ExpressionContext>& expCtx, RecordStore* rs, RecordId rID) const {
+    setIgnoreConflictsWriteBehavior(expCtx);
     writeConflictRetry(expCtx->opCtx, "MPI::deleteFromRecordStore", expCtx->ns.ns(), [&] {
         AutoGetCollection autoColl(expCtx->opCtx, expCtx->ns, MODE_IX);
         WriteUnitOfWork wuow(expCtx->opCtx);
@@ -706,6 +719,7 @@ void CommonMongodProcessInterface::deleteRecordFromRecordStore(
 
 void CommonMongodProcessInterface::truncateRecordStore(
     const boost::intrusive_ptr<ExpressionContext>& expCtx, RecordStore* rs) const {
+    setIgnoreConflictsWriteBehavior(expCtx);
     writeConflictRetry(expCtx->opCtx, "MPI::truncateRecordStore", expCtx->ns.ns(), [&] {
         AutoGetCollection autoColl(expCtx->opCtx, expCtx->ns, MODE_IX);
         WriteUnitOfWork wuow(expCtx->opCtx);
@@ -718,6 +732,7 @@ void CommonMongodProcessInterface::truncateRecordStore(
 void CommonMongodProcessInterface::deleteTemporaryRecordStore(
     const boost::intrusive_ptr<ExpressionContext>& expCtx,
     std::unique_ptr<TemporaryRecordStore> rs) const {
+    setIgnoreConflictsWriteBehavior(expCtx);
     AutoGetCollection autoColl(expCtx->opCtx, expCtx->ns, MODE_IX);
     rs->finalizeTemporaryTable(expCtx->opCtx, TemporaryRecordStore::FinalizationAction::kDelete);
 }
